account ui, some auth and db components created

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mongoose": "^8.9.5",
     "nanoid": "^5.0.9",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
